[Refactor] Removed most of the deprecated APIs usages. [Bugfix] Removed certain bugs related to code that was using these deprecated APIs usages, such as the Zoom dialog not selecting your current Zoom for different Zoom levels.